WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
315051
Scroll view background color doesn't adapt with rest of background on PDFs
https://bugs.webkit.org/show_bug.cgi?id=315051
Summary
Scroll view background color doesn't adapt with rest of background on PDFs
Jessica Cheung
Reported
2026-05-18 14:50:07 PDT
rdar://171223676
Attachments
Add attachment
proposed patch, testcase, etc.
Jessica Cheung
Comment 1
2026-05-18 15:05:43 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/65136
EWS
Comment 2
2026-05-19 10:12:14 PDT
Committed
313495@main
(73bbfe7d99dc): <
https://commits.webkit.org/313495@main
> Reviewed commits have been landed. Closing PR #65136 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug